@@ -1,3 +1,8 @@
+2006-09-26  Howard Hinnant  <hhinnant@apple.com>
+
+	PR libstdc++/29224
+	* include/tr1/functional_iterate.h: Avoid -Wshadow warnings.
+
 2006-09-25  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/29179
